[gd_scene load_steps=2 format=3 uid="uid://djastd2tf6n5"]

[ext_resource type="Script" uid="uid://dl0m3v1vkq3w5" path="res://components/popups/game_over.gd" id="1_f8edm"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f8edm")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="HeaderLabel" type="Label" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "GAME OVER"
horizontal_alignment = 1

[node name="ReasonLabel" type="Label" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Reason"
horizontal_alignment = 1

[node name="DeleteButton" type="Button" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "It's the right thing to do"
focus_mode = 0
text = "Delete Profile"

[node name="ReloadButton" type="Button" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "You really think you can do better?"
focus_mode = 0
text = "Reload Save"

[node name="ContinueButton" type="Button" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "The perfect option for babies"
focus_mode = 0
text = " Continue with Infinite Credit Limit "

[node name="Control" type="Control" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
